<resources>
    <string name="unknown_error">Unknown error!</string>
    <string name="network_error">Make sure you are connected to internet!</string>
    <string name="search_city">Search a City</string>
    <string name="auth_error">Please logged in to add city to your favorites</string>

    <!-- BOTTOM NAVIGATION BAR -->
    <string name="action_search">Search City</string>
    <string name="action_profile">Profile</string>

    <!-- CityListFragment-->
    <string name="last_searches">Last Searches:</string>
    <string name="clear_history">Clear History</string>
    <string name="empty_last_searches">Start typing a city</string>
    <string name="error_search_not_found">Searched city is not exist</string>

    <!-- UserFragment -->
    <string name="profile_u">PROFILE</string>
    <string name="compare_u">COMPARE</string>

    <!-- ProfileFragment -->
    <string name="logout">Logout</string>
    <string name="hi">Hi, </string>
    <string name="my_favorite_cities">My Favorite Cities</string>

    <!-- CityDetailActivity -->
    <string name="no_data_to_show">No data</string>
    <string name="no_favorite_city">No favorite city yet</string>
    <string name="already_added_to_compare_list">You\'ve already added this city</string>
    <string name="exceeds_max_compare_size">You\'ve already added two cities to compare, please clear compared cities and try again</string>
    <string name="success_add_to_compare">City successfully added to Compare List</string>
    <string name="score_out_of_100">Score: %1$.1f</string>

    <!-- CompareFragment -->
    <string name="no_data_to_compare">There should be two cities to compare</string>

    <!-- Widget -->
    <string name="appwidget_empty_view">Favorites are empty</string>
    <string name="appwidget_text">My Favorite Cities</string>
    <string name="score_out_of_10">%1$s/10</string>
    <string name="total_score">Total Score</string>
</resources>