<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.projects.melih.wonderandwander.ui.user.ProfileFragment">

    <data>

        <variable
            name="user"
            type="com.projects.melih.wonderandwander.model.User"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary100">

            <View
                android:id="@+id/name_area"
                android:layout_width="match_parent"
                android:background="@color/black_transparent_10"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/large_size"
                android:layout_marginTop="@dimen/large_size"
                android:layout_marginEnd="@dimen/large_size"
                app:layout_constraintBottom_toBottomOf="@+id/username"
                app:layout_constraintTop_toTopOf="parent"/>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/image_profile"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/large_size"
                app:layout_constraintBottom_toBottomOf="@+id/name_area"
                app:layout_constraintStart_toStartOf="@+id/name_area"
                app:layout_constraintTop_toTopOf="@+id/name_area"
                app:srcCompat="@drawable/ic_profile_black"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/hi"
                style="@style/Text.NunitoSemiBold"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:text="@string/hi"
                android:layout_marginTop="@dimen/large_size"
                android:layout_marginStart="@dimen/large_size"
                app:layout_constraintEnd_toEndOf="@+id/name_area"
                app:layout_constraintStart_toEndOf="@+id/image_profile"
                app:layout_constraintTop_toTopOf="@+id/name_area"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/username"
                style="@style/Text.NunitoBold.H6"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:paddingBottom="@dimen/large_size"
                android:text="@{user.displayName}"
                app:layout_constraintEnd_toEndOf="@+id/name_area"
                app:layout_constraintStart_toStartOf="@+id/hi"
                app:layout_constraintTop_toBottomOf="@+id/hi"
                tools:text="Melih"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/logout"
                style="@style/Button.Red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large_size"
                android:text="@string/logout"
                app:layout_constraintTop_toBottomOf="@+id/name_area"/>
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom_sheet"
            android:layout_marginTop="@dimen/min_size"
            android:orientation="vertical"
            android:minHeight="@dimen/bottom_sheet_peak_height"
            app:behavior_hideable="false"
            app:behavior_peekHeight="@dimen/bottom_sheet_peak_height"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

            <android.support.v7.widget.AppCompatTextView
                style="@style/Text.NunitoSemiBold.H6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_size"
                android:layout_marginStart="@dimen/normal_size"
                android:text="@string/my_favorite_cities"/>

            <com.projects.melih.wonderandwander.components.AutofitRecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:clipToPadding="false"
                android:numColumns="auto_fit"
                android:padding="@dimen/x_min_size"
                android:visibility="gone"
                app:itemWidth="@dimen/list_item_width"
                tools:listitem="@layout/item_city_list"
                tools:visibility="gone"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/empty_view_favorites"
                style="@style/Text.AlegreyaExtraBold"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/gray_dark"
                android:text="@string/no_favorite_city"
                android:visibility="visible"/>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>